Take the nullable bounds back off the tuples